apep_0150/v5/REPLICATION.md
# Replication Package: apep_0166

This folder contains all code and data needed to replicate the analysis.

## Requirements

- Python 3.10+
- Required packages: See below (or `requirements.txt` if present)

```bash
pip install pandas numpy statsmodels matplotlib
```

## Data

Data is fetched from the Census PUMS API (no API key required for basic queries).

**Cached data files:**
- `analysis_panel.csv`
- `analysis_panel.rds`
- `analysis_panel_allages.rds`
- `anticipation_leads.rds`
- `bacon_decomposition.rds`
- `cohort_att_table.rds`
- `cs_agg_calendar.rds`
- `cs_agg_calendar_allages.rds`
- `cs_agg_group.rds`
- `cs_agg_group_allages.rds`
- `cs_event_study.rds`
- `cs_event_study_allages.rds`
- `cs_result.rds`
- `cs_result_allages.rds`
- `dilution_table.rds`
- `es_coefficients.rds`
- `es_coefficients_allages.rds`
- `honestdid_results.rds`
- `insulin_utilization.csv`
- `insulin_utilization.rds`
- `main_results.rds`
- `main_results_allages.rds`
- `main_results_primary.rds`
- `mde_table.rds`
- `mortality_data.csv`
- `mortality_data.rds`
- `mortality_working_age.rds`
- `panel_vermont_control.rds`
- `panel_vermont_treated.rds`
- `placebo_cancer.rds`
- `placebo_cancer_event_study.rds`
- `placebo_cancer_event_study_full.rds`
- `placebo_cancer_post.rds`
- `placebo_heart.rds`
- `placebo_heart_event_study.rds`
- `placebo_heart_event_study_full.rds`
- `placebo_heart_post.rds`
- `placebo_in_time.rds`
- `policy_database.csv`
- `robustness_results.rds`
- `sa_result.rds`
- `sa_result_allages.rds`
- `state_lookup.rds`
- `vermont_sensitivity.rds`
- `wild_bootstrap_result.rds`

## Code

**Scripts (run in order):**
- `00_packages.R`
- `01_fetch_data.R`
- `01b_fetch_wonder_data.R`
- `01c_fetch_medicaid_insulin.R`
- `02_clean_data.R`
- `03_main_analysis.R`
- `04_robustness.R`
- `05_figures.R`
- `06_tables.R`
- `fix_inference_table.R`

## Replication Instructions

1. Install requirements:
   ```bash
   pip install pandas numpy statsmodels matplotlib
   # For R scripts: install.packages(c("did", "fixest", "ggplot2"))
   ```

2. Run the analysis scripts in order:
   ```bash
   cd code/
   # For Python scripts:
   python 01_fetch_data.py    # Downloads data
   python 02_analysis.py      # Runs main analysis
   python 03_figures.py       # Generates figures
   
   # For R scripts:
   Rscript 01_fetch_data.R
   Rscript 02_analysis.R
   Rscript 03_figures.R
   ```

3. Scripts are numbered in execution order (01_, 02_, etc.).

## Data Source

Census PUMS (Public Use Microdata Sample)
- API: https://api.census.gov/data/{YEAR}/acs/acs1/pums
- Documentation: https://www.census.gov/programs-surveys/acs/microdata.html
- No API key required for basic queries

## Notes

- Scripts may contain hardcoded paths that need adjustment
- Cached JSON files allow replication without re-downloading
- For full replication from scratch, delete JSON files and re-run fetch scripts

---
Generated by APEP publish_paper.py
